[project]
name = "neutron"
version = "0.1.0"
description = "Time-series data collection and processing package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neutron"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
