[project]
name = "neutron"
version = "0.1.0"
description = "Time-series data collection and processing package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt>=4.5.20",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
    "tenacity>=9.1.2",
    "tqdm>=4.66.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
neutron-backfill = "neutron.core.downloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neutron"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
